# blabot

./: .flake8  .gitignore  CLAUDE.md  LICENSE  README.md  io_interact.py  program_io.py  pyproject.toml  requirements.txt  sample.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-tests.yaml  deploy-example-docker.yaml  docker-build.yaml  pr-check.yaml  python-ci.yaml  release.yaml
blabot/: __init__.py  _pexpect_helpers.py  device_io.py  docker_io.py  process_io.py  ssh_io.py  templated_io.py
docs/: process_io.pu
examples/: Dockerfile  Dockerfile.ssh-server  README.md  conftest.py  docker-compose.yaml  example.py  example_app.py  example_cli.py  example_usage.py  pytest.ini  test_example.py
examples/cli/: example_cli.py
examples/scripts/: run_device_test.sh
examples/tests/: test_device.py  test_docker.py  test_example_ctrl.py  test_example_startup.py  test_ssh.py
nn_io_interact/: docker_io.py  io_interact.py  process_io.py  program_io.py  ssh_io.py  templated_io.py
tests/: test_device_io.py  test_docker_io.py  test_process_io.py  test_ssh_io.py  test_templated_io.py
