[project]
name = "blabot"
version = "0.1.0"
description = "A sample project that communicates interactively with CLI process"
authors = [
    { name = "Nunoya Yuma", email = "nuno.yu.3838@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pexpect",
    "pexpect_serial",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-order",
    "ruff",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # pydocstyle - docstring requirements
    "COM812",   # trailing comma conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108", "ANN"]        # allow assert, temp files, and skip type annotations in tests
"*/tests/*" = ["S101", "S108", "ANN"]      # allow assert, temp files, and skip type annotations in nested test directories
"examples/*" = ["S101", "S603", "S108", "ANN"]  # allow assert, subprocess, temp files, and skip type annotations in example code
"blabot/docker_io.py" = ["S603"]  # allow subprocess for docker commands
