[project]
name = "blabot"
version = "0.1.0"
description = "A sample project that communicates interactively with CLI process"
authors = [
    { name = "Nunoya Yuma", email = "nuno.yu.3838@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pexpect",
    "pexpect_serial",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-order",
    "ruff",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # trailing comma conflicts with formatter
    "D203",     # 1 blank line required before class docstring (conflicts with D211)
    "D213",     # multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108", "ANN", "D"]        # allow assert, temp files, skip type annotations and docstrings in tests
"*/tests/*" = ["S101", "S108", "ANN", "D"]      # allow assert, temp files, skip type annotations and docstrings in nested test directories
"examples/*" = ["S101", "S603", "S108", "ANN", "D"]  # allow assert, subprocess, temp files, skip type annotations and docstrings in example code
"blabot/docker_io.py" = ["S603"]  # allow subprocess for docker commands
