[project]
name = "blabot"
version = "0.1.0"
description = "A sample project that communicates interactively with CLI process"
authors = [
    { name = "Nunoya Yuma", email = "nuno.yu.3838@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pexpect",
    "pexpect_serial",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-order",
    "ruff",
    "mypy",
    "types-pexpect",
    "types-pyserial",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests for individual classes and methods",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # trailing comma conflicts with formatter
    "D203",     # 1 blank line required before class docstring (conflicts with D211)
    "D213",     # multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108", "ANN", "D", "PLR2004"]        # allow assert, temp files, magic values, skip type annotations and docstrings in tests
"*/tests/*" = ["S101", "S108", "ANN", "D", "PLR2004"]      # allow assert, temp files, magic values, skip type annotations and docstrings in nested test directories
"examples/*" = ["S101", "S603", "S108", "ANN", "D"]  # allow assert, subprocess, temp files, skip type annotations and docstrings in example code
"blabot/docker_io.py" = ["S603"]  # allow subprocess for docker commands

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Gradually enable strict mode
disallow_any_generics = false  # Enable later
disallow_subclassing_any = false  # Enable later

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pexpect_serial"
ignore_missing_imports = true
